[gd_scene load_steps=60 format=2]

[ext_resource path="res://Battle.gd" type="Script" id=1]
[ext_resource path="res://Enemy2.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy1.tscn" type="PackedScene" id=3]
[ext_resource path="res://PlayerStats.gd" type="Script" id=4]
[ext_resource path="res://Images/Dungeon.png" type="Texture" id=5]
[ext_resource path="res://Images/Mobile RPG Mockup.png" type="Texture" id=6]
[ext_resource path="res://DefaultTheme.tres" type="Theme" id=7]
[ext_resource path="res://StatsPanel.gd" type="Script" id=8]
[ext_resource path="res://SwordActionButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://HealActionButton.tscn" type="PackedScene" id=10]
[ext_resource path="res://boss-battle-2.ogg" type="AudioStream" id=11]
[ext_resource path="res://380.png" type="Texture" id=12]
[ext_resource path="res://131.png" type="Texture" id=13]
[ext_resource path="res://440.png" type="Texture" id=14]
[ext_resource path="res://324.png" type="Texture" id=15]
[ext_resource path="res://Enemy3.tscn" type="PackedScene" id=16]
[ext_resource path="res://PauseControl.gd" type="Script" id=17]
[ext_resource path="res://ActionButton.tscn" type="PackedScene" id=18]
[ext_resource path="res://350.png" type="Texture" id=19]
[ext_resource path="res://104.png" type="Texture" id=20]
[ext_resource path="res://PixelRPG.ttf" type="DynamicFontData" id=21]
[ext_resource path="res://Enemy4.tscn" type="PackedScene" id=22]
[ext_resource path="res://Enemy5.tscn" type="PackedScene" id=23]
[ext_resource path="res://Boss1.tscn" type="PackedScene" id=24]
[ext_resource path="res://EXP.gd" type="Script" id=25]
[ext_resource path="res://373.png" type="Texture" id=26]
[ext_resource path="res://ControlItems.gd" type="Script" id=27]
[ext_resource path="res://Enemy7.tscn" type="PackedScene" id=28]
[ext_resource path="res://ExperienceBar.tscn" type="PackedScene" id=29]
[ext_resource path="res://Enemy6.tscn" type="PackedScene" id=30]
[ext_resource path="res://Enemy8.tscn" type="PackedScene" id=31]
[ext_resource path="res://Enemy9.tscn" type="PackedScene" id=32]
[ext_resource path="res://Enemy10.tscn" type="PackedScene" id=33]
[ext_resource path="res://Boss2.tscn" type="PackedScene" id=34]
[ext_resource path="res://Enemy12.tscn" type="PackedScene" id=35]
[ext_resource path="res://Enemy11.tscn" type="PackedScene" id=36]
[ext_resource path="res://Enemy13.tscn" type="PackedScene" id=37]
[ext_resource path="res://Boss3.tscn" type="PackedScene" id=38]
[ext_resource path="res://Enemy14.tscn" type="PackedScene" id=39]
[ext_resource path="res://Enemy15.tscn" type="PackedScene" id=40]
[ext_resource path="res://Enemy17.tscn" type="PackedScene" id=41]
[ext_resource path="res://Enemy18.tscn" type="PackedScene" id=42]
[ext_resource path="res://Enemy16.tscn" type="PackedScene" id=43]
[ext_resource path="res://Boss4.tscn" type="PackedScene" id=44]
[ext_resource path="res://Boss5.tscn" type="PackedScene" id=45]
[ext_resource path="res://Boss6.tscn" type="PackedScene" id=46]
[ext_resource path="res://Enemy19.tscn" type="PackedScene" id=47]
[ext_resource path="res://Enemy20.tscn" type="PackedScene" id=48]
[ext_resource path="res://Enemy21.tscn" type="PackedScene" id=49]
[ext_resource path="res://Enemy22.tscn" type="PackedScene" id=50]
[ext_resource path="res://Enemy23.tscn" type="PackedScene" id=51]
[ext_resource path="res://Enemy24.tscn" type="PackedScene" id=52]
[ext_resource path="res://Enemy25.tscn" type="PackedScene" id=53]
[ext_resource path="res://Boss7.tscn" type="PackedScene" id=54]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 21 )

[sub_resource type="DynamicFont" id=3]
size = 6
font_data = ExtResource( 21 )

[sub_resource type="GDScript" id=4]
script/source = "extends TextureButton

"

[sub_resource type="Animation" id=5]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Battle" type="Node"]
script = ExtResource( 1 )
enemies = [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 16 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 30 ), ExtResource( 28 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 36 ), ExtResource( 35 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 43 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 44 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 45 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 46 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ) ]

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Dungeon" type="Sprite" parent="."]
position = Vector2( 44.9425, 79.7024 )
texture = ExtResource( 5 )

[node name="EnemyPosition" type="Position2D" parent="."]
position = Vector2( 44, 36.2102 )

[node name="Enemy" parent="EnemyPosition" instance=ExtResource( 3 )]
position = Vector2( 0, -0.0150185 )

[node name="Mobile RPG Mockup" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.294118 )
position = Vector2( 45, 80 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="CenterContainer" type="CenterContainer" parent="UI"]
margin_top = 10.5429
margin_right = 90.0
margin_bottom = 57.5429
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextRoomButton" type="Button" parent="UI/CenterContainer"]
visible = false
margin_left = 3.0
margin_top = 14.0
margin_right = 86.0
margin_bottom = 32.0
rect_min_size = Vector2( 70, 13 )
text = "ENTER NEXT ROOM"
icon = ExtResource( 14 )

[node name="StatsPanel" type="Panel" parent="UI"]
margin_left = 1.0
margin_top = 55.0
margin_right = 89.0
margin_bottom = 78.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsContainer" type="HBoxContainer" parent="UI/StatsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.785828
margin_top = -0.396851
margin_right = 1.21417
margin_bottom = -0.396851
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_top = 2.0
margin_right = 32.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "HP
25/25"
align = 1

[node name="AP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 36.0
margin_top = 2.0
margin_right = 58.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "AP
3/3"
align = 1

[node name="MP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 62.0
margin_top = 2.0
margin_right = 90.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "MP
10/10"
align = 1

[node name="TextboxPanel" type="Panel" parent="UI"]
margin_left = -2.0
margin_top = 137.0
margin_right = 92.0
margin_bottom = 162.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Textbox" type="RichTextLabel" parent="UI/TextboxPanel"]
margin_left = 3.0
margin_top = 2.0
margin_right = 91.0
margin_bottom = 23.0
custom_styles/normal = SubResource( 1 )
custom_constants/line_separation = 2
text = "Welcome to the dungeon, how far can you go?"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleActionButtons" type="GridContainer" parent="UI"]
margin_left = 34.0
margin_top = 86.0
margin_right = 56.0
margin_bottom = 130.0
custom_constants/vseparation = 3
custom_constants/hseparation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwordActionButton" parent="UI/BattleActionButtons" instance=ExtResource( 9 )]
margin_right = 22.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 13 )
text = ""
icon = ExtResource( 13 )

[node name="HealActionButton" parent="UI/BattleActionButtons" instance=ExtResource( 10 )]
margin_top = 23.0
margin_right = 22.0
margin_bottom = 44.0
rect_min_size = Vector2( 20, 13 )
text = ""
icon = ExtResource( 12 )

[node name="RoomLabel" type="Label" parent="UI"]
margin_left = 41.0464
margin_top = 0.111362
margin_right = 77.0464
margin_bottom = 12.1114
text = "Room 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LVL" type="Label" parent="UI"]
margin_left = 1.59691
margin_top = 80.0
margin_right = 17.5969
margin_bottom = 92.0
text = "XP"
script = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" parent="UI" instance=ExtResource( 29 )]
margin_left = 12.0
margin_top = 92.0
margin_right = 20.0
margin_bottom = 128.0
fill_mode = 3

[node name="ControlItems" type="Control" parent="UI"]
pause_mode = 2
margin_left = 56.0
margin_top = 96.0
margin_right = 144.0
margin_bottom = 96.0
script = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="UI/ControlItems"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="UI/ControlItems/Buttons"]
pause_mode = 2
position = Vector2( 85.0185, -15.9884 )
texture = ExtResource( 5 )

[node name="Continue" parent="UI/ControlItems/Buttons" instance=ExtResource( 18 )]
pause_mode = 2
margin_left = 55.7142
margin_top = 40.0
margin_right = 111.714
margin_bottom = 61.0
action_mode = 0
text = "CONTINUE"
icon = ExtResource( 20 )
script = null

[node name="Stats" type="Label" parent="UI/ControlItems/Buttons"]
margin_left = 54.0
margin_top = -80.0
margin_right = 119.0
margin_bottom = -61.0
text = "Here you can 
see your stats!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerStats" type="VBoxContainer" parent="UI/ControlItems/Buttons"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 41.0
margin_top = -45.0
margin_right = 89.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="UI/ControlItems/Buttons/PlayerStats"]
pause_mode = 2
margin_right = 88.0
margin_bottom = 80.0
rect_min_size = Vector2( 88, 80 )

[node name="CountKills" type="Label" parent="UI/ControlItems/Buttons/PlayerStats/Panel"]
margin_left = 3.0
margin_top = 4.0
margin_right = 41.0
margin_bottom = 16.0
text = "KILLS 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExpCount" type="Label" parent="UI/ControlItems/Buttons/PlayerStats/Panel"]
margin_left = 51.0
margin_top = 4.0
margin_right = 81.0
margin_bottom = 16.0
text = "EXP 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamageCausedCount" type="Label" parent="UI/ControlItems/Buttons/PlayerStats/Panel"]
margin_left = 3.0
margin_top = 23.0
margin_right = 39.0
margin_bottom = 35.0
text = "DMGC 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomCount" type="Label" parent="UI/ControlItems/Buttons/PlayerStats/Panel"]
margin_left = 25.6185
margin_top = 61.7541
margin_right = 61.6185
margin_bottom = 73.7541
text = "ROOM 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPCount" type="Label" parent="UI/ControlItems/Buttons/PlayerStats/Panel"]
margin_left = 51.0
margin_top = 42.6031
margin_right = 77.0
margin_bottom = 54.6031
text = "HP 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="APCount" type="Label" parent="UI/ControlItems/Buttons/PlayerStats/Panel"]
margin_left = 5.22726
margin_top = 42.5093
margin_right = 31.2273
margin_bottom = 54.5093
text = "AP 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MPCount" type="Label" parent="UI/ControlItems/Buttons/PlayerStats/Panel"]
margin_left = 50.5546
margin_top = 23.355
margin_right = 78.5546
margin_bottom = 35.355
text = "MP 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Effect" type="Tween" parent="UI/ControlItems"]
pause_mode = 2

[node name="ActionButtonItems" parent="UI/ControlItems" instance=ExtResource( 18 )]
margin_left = 4.0
margin_top = 1.0
margin_right = 24.0
margin_bottom = 21.0
rect_min_size = Vector2( 20, 13 )
icon = ExtResource( 26 )
script = null

[node name="ControlPause" type="Control" parent="UI/ControlItems"]
margin_left = -56.0
margin_top = -96.0
margin_right = -12.0
margin_bottom = -96.0
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="UI/ControlItems/ControlPause"]
margin_right = 40.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundPause" type="Sprite" parent="UI/ControlItems/ControlPause/Buttons"]
pause_mode = 2
position = Vector2( -49.9346, 80 )
texture = ExtResource( 5 )

[node name="Continue" parent="UI/ControlItems/ControlPause/Buttons" instance=ExtResource( 18 )]
pause_mode = 2
margin_left = -78.0
margin_top = 84.992
margin_right = -22.0
margin_bottom = 105.992
action_mode = 0
text = "CONTINUE"
icon = ExtResource( 20 )
script = null

[node name="Exit" parent="UI/ControlItems/ControlPause/Buttons" instance=ExtResource( 18 )]
pause_mode = 2
margin_left = -68.0
margin_top = 108.962
margin_right = -32.0
margin_bottom = 125.962
text = "EXIT"
icon = ExtResource( 19 )
script = null

[node name="Pause" type="Label" parent="UI/ControlItems/ControlPause/Buttons"]
margin_left = -85.0
margin_top = 60.0
margin_right = -11.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 2 )
text = "PAUSED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Breath" type="Label" parent="UI/ControlItems/ControlPause/Buttons"]
margin_left = -84.0
margin_top = 12.1952
margin_right = -15.0
margin_bottom = 53.1952
custom_fonts/font = SubResource( 3 )
text = "Are you taking 
a breath...

right?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Effect" type="Tween" parent="UI/ControlItems/ControlPause"]
pause_mode = 2

[node name="TextureButton" type="TextureButton" parent="UI/ControlItems/ControlPause"]
pause_mode = 2
margin_left = 16.3838
margin_top = 1.54291
margin_right = 34.3838
margin_bottom = 19.5429
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 15 )
script = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeToNewRoom = SubResource( 5 )

[node name="MusicBattle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true

[connection signal="ap_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_ap_changed"]
[connection signal="experience_gained" from="PlayerStats" to="UI/TextureProgress" method="_on_PlayerStats_experience_gained"]
[connection signal="hp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_hp_changed"]
[connection signal="mp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_mp_changed"]
[connection signal="pressed" from="UI/CenterContainer/NextRoomButton" to="." method="_on_NextRoomButton_pressed"]
[connection signal="pressed" from="UI/ControlItems/Buttons/Continue" to="UI/ControlItems" method="_on_Continue_pressed"]
[connection signal="pressed" from="UI/ControlItems/ActionButtonItems" to="UI/ControlItems" method="_on_ActionButton_pressed"]
[connection signal="pressed" from="UI/ControlItems/ControlPause/Buttons/Continue" to="UI/ControlItems/ControlPause" method="_on_Continue_pressed"]
[connection signal="pressed" from="UI/ControlItems/ControlPause/Buttons/Exit" to="UI/ControlItems/ControlPause" method="_on_Exit_pressed"]
[connection signal="pressed" from="UI/ControlItems/ControlPause/TextureButton" to="UI/ControlItems/ControlPause" method="_on_TextureButton_pressed"]
